--- a/community/cypher/cypher-compiler-2.1/pom.xml
+++ b/community/cypher/cypher-compiler-2.1/pom.xml
@@ -91,6 +91,21 @@
         <scope>provided</scope>
     </dependency>
 
+
+      <!-- neo4j-spatial -->
+      <dependency>
+          <groupId>org.neo4j</groupId>
+          <artifactId>neo4j-spatial</artifactId>
+          <version>0.13-neo4j-2.1.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.neo4j</groupId>
+          <artifactId>neo4j-cypher</artifactId>
+          <version>2.1-SNAPSHOT</version>
+          <scope>provided</scope>
+      </dependency>
+
     <!-- neo4j-cypher -->
 
     <dependency>
